Fixing some more blurple that was too much

--- a/production/style.css
+++ b/production/style.css
@@ -66,7 +66,7 @@ h4,
 h5,
 h6 {
   /* font-family: "Fusiona", sans-serif; */
-  color: var(--blurple);
+  color: var(--ink);
 }
 
 span {
@@ -79,7 +79,7 @@ a,
 }
 
 label {
-  color: var(--blurple);
+  color: var(--ink);
 }
 
 .button,
@@ -398,7 +398,7 @@ body .lesson-page #lp-wrapper #lesson-body .lesson-top {
   font-weight: 600;
   font-size: 36px;
   line-height: 43.2px;
-  color: var(--blurple);
+  color: var(--ink);
 }
 
 .content-img-outer-container {
@@ -444,8 +444,8 @@ body .lesson-page #lp-wrapper #lesson-body .lesson-top {
 }
 
 #lp-left-nav .lesson-active {
-  background-color: var(--secondary-light-gray-hex);
-  color: var(--blurple);
+  background-color: #eaeaea;
+  color: var(--ink);
   margin: 0 12px;
   border-radius: 4px;
 }
@@ -464,7 +464,7 @@ pre[class*="language-"] {
 .lp-color-scheme-light .lp-left-nav .section-title,
 .lesson-page #lp-wrapper #lesson-body,
 .course-text-content {
-  color: var(--blurple) !important;
+  color: var(--ink) !important;
 }
 
 .lp-color-scheme-light .lp-left-nav .course-title,
